# tor-operator

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  Tiltfile  Tiltfile.yaml  chart-releaser.yaml  deny.toml  index.html  index.yaml  justfile  mkdocs.yml  release.toml
.docker/: main.rs
.github/: dependabot.yaml
.github/workflows/: cd-onion-balance.yaml  cd-post-release-documentation.yaml  cd-post-release.yaml  cd-tor.yaml  ci-kubernetes.yaml  ci-rust.yaml  container.yaml  dependabot-auto-merge.yml  github-pages.yaml  github-stale.yaml  helm.yaml  onion-balance.yaml  onionbalance.yaml  post-release-documentation.yaml  post-release.yaml  release.yaml  rust.yaml  schedule-cargo-deny.yaml  schedule-github-stale.yaml  tor-operator.yaml  tor.yaml
.kubernetes/hyperdx/: hyperdx.yaml
.kubernetes/metrics-server/: metrics-server.yaml
.kubernetes/prometheus/: prometheus.yaml
.multipass/github-runner/: cloud-config.yaml
charts/tor-operator/: Chart.yaml  values.yaml
charts/tor-operator/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  mutatingwebhookconfiguration.yaml  onionbalance.yaml  onionkey.yaml  onionservice.yaml  service.yaml  serviceaccount.yaml  toringress.yaml  torproxy.yaml
cli/: index.html
cli_help/: index.html
containers/onion-balance/: Dockerfile
containers/tor/: Dockerfile
custom_resource_definitions/: onionbalance.yaml  onionservice.yaml
custom_resource_definitions/onion_balance/: index.html
custom_resource_definitions/onion_key/: index.html
custom_resource_definitions/onion_service/: index.html
custom_resource_definitions/tor_ingress/: index.html
docs/: 404.html  changelog.md  cli.md  cli_help.md  container_images.md  getting_started.md  helm.md  index.html  index.md  sitemap.xml
docs/changelog/: index.html
docs/cli/: index.html
docs/cli_help/: index.html
docs/container_images/: index.html
docs/custom_resource_definitions/: onion_balance.md  onion_key.md  onion_service.md  onionbalance.md  onionbalance.yaml  onionkey.md  onionkey.yaml  onionservice.md  onionservice.yaml  tor_ingress.md  toringress.md  toringress.yaml  torproxy.md  torproxy.yaml
docs/custom_resource_definitions/onion_balance/: index.html
docs/custom_resource_definitions/onion_key/: index.html
docs/custom_resource_definitions/onion_service/: index.html
docs/custom_resource_definitions/onionbalance/: index.html
docs/custom_resource_definitions/onionkey/: index.html
docs/custom_resource_definitions/onionservice/: index.html
docs/custom_resource_definitions/tor_ingress/: index.html
docs/custom_resource_definitions/toringress/: index.html
docs/custom_resource_definitions/torproxy/: index.html
docs/getting_started/: index.html
docs/helm/: index.html
docs/licenses/: first_party.md  third_party.md  third_party.yaml
docs/licenses/first_party/: index.html
docs/observability/: logs.md  metrics.md  opentelemetry.md  tracing.md
docs/observability/logs/: index.html
docs/observability/metrics/: index.html
docs/observability/opentelemetry/: index.html
docs/observability/tracing/: index.html
docs/security/: cluster_role.md
docs/security/cluster_role/: index.html
example/: Chart.yaml
example/templates/: configmap.yaml  onionbalance.yaml  onionservice.yaml  secret.yaml
example/templates/onionbalance/: onionbalance.yaml  onionkey.yaml
example/templates/onionbalance_aln/: onionbalance.yaml  onionkey.yaml
example/templates/onionbalance_containers/: configmap.yaml  onionbalance.yaml  onionkey.yaml
example/templates/onionbalance_deployment/: onionbalance.yaml  onionkey.yaml
example/templates/onionbalance_full/: onionbalance.yaml  onionkey.yaml
example/templates/onionbalance_minimal/: onionbalance.yaml  onionkey.yaml
example/templates/onionbalance_torrc/: configmap.yaml  onionbalance.yaml  onionkey.yaml  secret.yaml
example/templates/onionkey/: onionkey.yaml  secret.yaml
example/templates/onionkey_aln/: onionkey.yaml
example/templates/onionkey_auto_generate/: onionkey.yaml
example/templates/onionkey_full/: onionkey.yaml
example/templates/onionkey_minimal/: onionkey.yaml  secret.yaml
example/templates/onionservice/: onionkey.yaml  (+1 more)
getting_started/: index.html
helm/: values.yaml
helm/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  crd.yaml  deployment.yaml  onionservice.yaml  role.yaml  rolebinding.yaml  service.yaml
helm/test-application/: Chart.yaml  values.yaml
helm/test-daemon/: Chart.yaml  values.yaml
helm/tor-operator/: Chart.yaml  values.yaml
site/: index.html
src/: cli.rs  collections.rs  controller.rs  crd.rs  crypto.rs  http_server.rs  https_server.rs  kubernetes.rs  lib.rs  main.rs  metrics.rs  onion_address.rs  onion_balance.rs  onion_key.rs  onion_service.rs  onionbalance.rs  onionservice.rs  otel.rs  tor_ingress.rs  tor_proxy.rs  utils.rs
src/controllers/: mod.rs  onionbalance.rs  onionservice.rs
src/kubernetes/: annotation.rs  annotations.rs  api.rs  conditions_ext.rs  config_yaml.rs  constants.rs  container.rs  container_port.rs  context.rs  deployment_container_resources.rs  env_var.rs  error_backoff.rs  error_policy.rs  hostname.rs  labels.rs  mod.rs  ob_config.rs  object.rs  pod_security_context.rs  resource.rs  resource_name.rs  resource_namespace.rs  resource_uid.rs  selector_labels.rs  subset.rs  tor.rs  torrc.rs  volume.rs  volume_mount.rs
src/tor/: config_yaml.rs  constants.rs  expanded_secret_key.rs  hidden_service_public_key.rs  hidden_service_secret_key.rs  hostname.rs  mod.rs  ob_config.rs  public_key.rs  torrc.rs
tor/: Dockerfile
tor-daemon/: Cargo.toml  Dockerfile
tor-daemon/src/: main.rs  startup.rs
tor-operator/: Cargo.toml  Dockerfile
tor-operator-daemon/: Cargo.toml  Dockerfile
tor-operator-daemon/src/: configuration.rs  lib.rs  main.rs  startup.rs
tor-operator/src/: lib.rs  main.rs  main_crd_gen.rs  operator.rs  startup.rs
tor-operator/src/operator/: custom_resource.rs  daemon_deployment.rs  mod.rs
yaml/: crd.yaml  instance-1.yaml  instance-2.yaml
(+75 files in other folders)
