[package]
name = "tor-operator"
version = "0.0.38"
edition = "2024"
description = "Tor Operator is a Kubernetes Operator that manages Onion Balances, Onion Keys and Onion Services to provide a highly available, load balanced and fault tolerate Tor Ingress and Tor Proxy."
documentation="https://agabani.github.io/tor-operator/docs/"
license = "MIT"
repository="https://github.com/agabani/tor-operator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.4"
base32 = "0.5.1"
clap = { version = "4.5.40", features = ["derive", "env"] }
clap-markdown = "0.1.5"
curve25519-dalek = { version = "4.2.0", features = ["legacy_compatibility"] }
ed25519-dalek = { version = "2.1.1", features = ["hazmat", "rand_core"] }
futures = "0.3.31"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.15", features = ["tokio"] }
k8s-openapi = { version = "0.25.0", features = ["latest", "schemars"] }
kube = { version = "1.1.0", features = ["client", "derive", "runtime", "rustls-tls"], default-features = false }
opentelemetry = { version = "0.30.0", features = ["metrics"] }
opentelemetry-appender-tracing = "0.30.1"
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic", "gzip-tonic", "logs", "metrics", "reqwest-rustls-webpki-roots", "tls", "tls-webpki-roots", "trace", "zstd-tonic"] }
opentelemetry-stdout = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
rand_08 = { package = "rand", version = "0.8.5" }
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
sha3 = "0.10.8"
tokio = { version = "1.46.1", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
