[package]
name = "tor-operator"
version = "1.0.2"
edition = "2024"
description = "Tor Operator is a Kubernetes Operator that manages Onion Balances, Onion Keys and Onion Services to provide a highly available, load balanced and fault tolerate Tor Ingress and Tor Proxy."
documentation="https://agabani.github.io/tor-operator/docs/"
license = "MIT"
repository="https://github.com/agabani/tor-operator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.7"
base32 = "0.5.1"
clap = { version = "4.5.53", features = ["derive", "env"] }
clap-markdown = "0.1.5"
curve25519-dalek = { version = "4.1.3", features = ["legacy_compatibility"] }
ed25519-dalek = { version = "2.2.0", features = ["hazmat", "rand_core"] }
futures = "0.3.31"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.18", features = ["tokio"] }
k8s-openapi = { version = "0.26.0", features = ["earliest", "schemars"] }
kube = { version = "2.0.1", features = ["client", "derive", "runtime", "rustls-tls"], default-features = false }
opentelemetry = { version = "0.31.0", features = ["metrics"] }
opentelemetry-appender-tracing = "0.31.1"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "gzip-tonic", "logs", "metrics", "reqwest-rustls-webpki-roots", "tls", "tls-webpki-roots", "trace", "zstd-tonic"] }
opentelemetry-stdout = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
rand_08 = { package = "rand", version = "0.8.5" }
schemars = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
sha3 = "0.10.8"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.43"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
