[package]
name = "tor-daemon"
version = "0.1.0"
authors = ["agabani <agabani@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.4"
config = "0.11.0"
libtor = { version = "45.7.0", features = ["vendored-openssl"] }
libtor-sys = { version = "45.7.0", features = ["vendored-openssl"] }
serde = { version = "1.0.125", features = ["serde_derive"] }
tokio = { version = "1.4.0", features = ["macros"] }
