[package]
name = "tor-operator"
version = "0.1.0"
authors = ["agabani <agabani@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "tor-operator"
path = "src/main.rs"

[[bin]]
name = "tor-crd-gen"
path = "src/main_crd_gen.rs"

[dependencies]
actix-web = "4.0.0-beta.4"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
kube = { version = "0.51.0", default-features = false, features = ["derive", "rustls-tls"] }
kube-runtime = { version = "0.51.0", default-features = false, features = ["rustls-tls"] }
schemars = "0.8.2"
serde = "1.0.125"
serde_json = "1.0.64"
serde_yaml = "0.8.17"
tokio = { version = "1.4.0", features = ["macros"] }
